[package]
name = "ubjson"
description = "UBJSON parser"
documentation = "https://docs.rs/ubjson"
homepage = "https://github.com/OtaK/ubjson"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "ubjson",
    "ubj",
    "nom"
]
categories = [
    "parser-implementations",
    "encoding"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/OtaK/ubjson"
version = "0.2.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"

[dependencies]
nom = "7"
num_enum = "0.5"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
impl-serde = ["serde", "serde_json"]

[dev-dependencies]
criterion = "0.3"
serde = "1.0"
serde_json = "1.0"

[[bench]]
name = "ubjson"
path = "bench/ubjson.rs"
harness = false

[[bench]]
name = "vs_serde_json"
path = "bench/vs_serde_json.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
